customizable system prompt

--- a/sidebar/sidebar.html
+++ b/sidebar/sidebar.html
@@ -11,6 +11,11 @@
     <h1>OLLAMA Summarizer</h1>
     <button id="summarize" class="btn btn-primary">Summarize</button>
     <div id="summary" class="summary-container"></div>
+    <div class="form-group">
+      <label for="system-prompt">System Prompt:</label>
+      <textarea id="system-prompt" rows="3" class="form-control"></textarea>
+    </div>
+    <button id="save-prompt" class="btn btn-secondary">Save Prompt</button>
     <button id="open-options" class="btn btn-secondary">Open Settings</button>
   </div>
   <script src="sidebar.js"></script>
