updated token limits and model to be more modern

--- a/options/options.html
+++ b/options/options.html
@@ -23,11 +23,16 @@
         </div>
         <div class="form-group">
           <label for="model">OLLAMA Model:</label>
-          <input type="text" id="model" placeholder="llama2" />
+          <input type="text" id="model" placeholder="llama3.1:latest" />
         </div>
         <div class="form-group">
           <label for="token-limit">Token Limit:</label>
-          <input type="number" id="token-limit" min="1000" step="1000" placeholder="4096" />
+          <input
+            type="number"
+            id="token-limit"
+            min="1024"
+            placeholder="16384"
+          />
         </div>
         <button type="submit" class="btn btn-primary">Save Settings</button>
         <div class="form-group">
